// Copyright 2020 Antrea Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.vmware_tanzu.antrea.pkg.apis.controlplane.v1alpha1;

import "github.com/vmware-tanzu/antrea/pkg/apis/metrics/v1alpha1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

message NetworkPolicyReference {
  // Type of the NetworkPolicy.
  optional string type = 1;

  // Namespace of the NetworkPolicy. It's empty for ClusterNetworkPolicy.
  optional string namespace = 2;

  // Name of the NetworkPolicy.
  optional string name = 3;

  // UID of the NetworkPolicy.
  optional string uid = 4;
}

// NetworkPolicyStats contains the information and traffic stats of a NetworkPolicy.
message NetworkPolicyStats {
  // The reference of the NetworkPolicy.
  optional NetworkPolicyReference networkPolicy = 1;

  // The stats of the NetworkPolicy.
  optional github.com.vmware_tanzu.antrea.pkg.apis.metrics.v1alpha1.TrafficStats trafficStats = 2;
}

// NodeStatsSummary contains stats produced on a Node. It's used by the antrea-agents to report stats to the antrea-controller.
message NodeStatsSummary {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // The TrafficStats of K8s NetworkPolicies collected from the Node.
  repeated NetworkPolicyStats networkPolicies = 2;

  // The TrafficStats of Antrea ClusterNetworkPolicies collected from the Node.
  repeated NetworkPolicyStats antreaClusterNetworkPolicies = 3;

  // The TrafficStats of Antrea NetworkPolicies collected from the Node.
  repeated NetworkPolicyStats antreaNetworkPolicies = 4;
}

